syntax = "proto3";

package abi;


//客户端->服务端
message ToClient {
    // 通信id
    uint64 id = 1;
    oneof to_client_data {
        ToClientError error = 2;
        RespHandshake resp_handshake = 3;
        RespConfig resp_config = 4;
        BcPeerEnter peer_enter = 5;
    }
}
message ToClientError {
    int32 code = 1;
    string msg = 2;
}

/// 握手响应
message RespHandshake {
    bool success = 1;
    optional string msg = 4;
}
/// 配置响应
message RespConfig {
    int64 network_id = 1;
    // 分配的网络地址
    uint32 address = 2;
    // 子网掩码
    uint32 mask = 3;
    uint32 network = 4;
    //udp 端口
    uint32 port = 5;

    optional string ipv6_addr = 6;
    repeated BcPeerEnter peers = 10;
}
enum ConType {
    CON_TYPE_UDP = 0;
}

message BcPeerEnter {
    string pub_key = 1;
    /// 网络中的ip
    string ip = 2;
    optional string endpoint_addr = 4;
    /// udp 端口
    uint32 port = 5;
    /// 上次连接类型
    optional ConType last_con_type = 6;
}